# ctests

./: CMakeLists.txt  README.txt  ctestsconfig.h  ctestsconfig.h.in  main.c  main.cpp
MyLibrary/: CMakeLists.txt  mylibrary.c  mylibrary.cpp  mylibrary.h
